# storage/api-docs/api-docs.json
@@ -81,8 +81,7 @@
                                                             "The email field is required.",
                                                             "The email must be a valid email address."
                                                         ]
-                                                    },
-                                                    "collectionFormat": "multi"
+                                                    }
                                                 }
                                             },
                                             "type": "object"
@@ -135,10 +134,11 @@
                 ]
             }
         },
-        "/api/meals": {
+        "/api/order_possibilities": {
             "get": {
                 "tags": [
-                    "meals"
+                    "meals",
+                    "Futtertrog"
                 ],
                 "summary": "Meals for given date",
                 "description": "Schows the meals for the current on given date",
@@ -149,11 +149,70 @@
                         "in": "query",
                         "schema": {
                             "type": "string",
-                            "format": "date",
-                            "default": "today"
+                            "format": "date"
                         }
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "Meals list",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Meals"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/api/place_order": {
+            "post": {
+                "tags": [
+                    "order_items",
+                    "Futtertrog"
+                ],
+                "summary": "Place order",
+                "description": "Order a given meal for a given date",
+                "operationId": "order_items.store",
+                "requestBody": {
+                    "description": "Pass user credentials",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "date",
+                                    "meal_id"
+                                ],
+                                "properties": {
+                                    "date": {
+                                        "description": "Store a newly created resource in storage.",
+                                        "type": "string",
+                                        "format": "date",
+                                        "example": "2020-02-02"
+                                    },
+                                    "quantity": {
+                                        "description": "Store a newly created resource in storage.",
+                                        "type": "integer",
+                                        "minimum": "1",
+                                        "example": "1"
+                                    },
+                                    "meal_id": {
+                                        "$ref": "#/components/schemas/id"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
                         "description": "Success",
@@ -182,21 +241,9 @@
                 },
                 "type": "object"
             },
-            "Model": {
-                "properties": {
-                    "id": {
-                        "type": "integer"
-                    },
-                    "created_at": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
-                    "updated_at": {
-                        "type": "string",
-                        "format": "date-time"
-                    }
-                },
-                "type": "object"
+            "id": {
+                "type": "integer",
+                "example": "1"
             },
             "Pagination": {
                 "properties": {
@@ -242,55 +289,77 @@
                 "type": "object"
             },
             "Meal": {
-                "allOf": [
-                    {
-                        "$ref": "#/components/schemas/Model"
-                    },
-                    {
-                        "properties": {
-                            "title": {
-                                "type": "string",
-                                "readOnly": "true"
-                            },
-                            "description": {
-                                "type": "string",
-                                "readOnly": "true"
-                            },
-                            "price": {
-                                "type": "number",
-                                "format": "currency",
-                                "readOnly": "true"
-                            }
-                        },
-                        "type": "object"
-                    }
-                ]
-            },
-            "User": {
                 "required": [
-                    "password"
+                    "title",
+                    "description",
+                    "price"
                 ],
                 "properties": {
                     "id": {
-                        "type": "integer",
-                        "readOnly": "true",
-                        "example": "1"
+                        "$ref": "#/components/schemas/id"
+                    },
+                    "title": {
+                        "type": "string",
+                        "readOnly": "true"
+                    },
+                    "description": {
+                        "type": "string",
+                        "readOnly": "true"
+                    },
+                    "price": {
+                        "type": "number",
+                        "format": "float"
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "readOnly": "true"
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "readOnly": "true"
+                    }
+                },
+                "type": "object"
+            },
+            "Meals": {
+                "type": "array",
+                "items": {
+                    "$ref": "#/components/schemas/Meal"
+                }
+            },
+            "User": {
+                "required": [
+                    "password",
+                    "email",
+                    "name"
+                ],
+                "properties": {
+                    "id": {
+                        "$ref": "#/components/schemas/id"
                     },
                     "email": {
                         "description": "User unique email address",
                         "type": "string",
                         "format": "email",
-                        "readOnly": "true",
                         "example": "john@example.com"
                     },
                     "name": {
                         "type": "string",
-                        "readOnly": "true",
                         "example": "John"
                     },
                     "api_token": {
                         "type": "string",
                         "readOnly": "true"
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "format": "date-time"
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "format": "date-time"
                     }
                 },
                 "type": "object"
